force-app/main/default/objects/Opportunity/fields/Booking_Reference__c.field-meta.xml
<CustomField>
    <fullName>Booking_Reference__c</fullName>
    <description>Unique browser-generated reference for the original NTE application.</description>
    <externalId>true</externalId>
    <label>NTE Booking Reference</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>