force-app/main/default/objects/Opportunity/fields/NTE_Additional_Staff_Count__c.field-meta.xml
<CustomField>
    <fullName>NTE_Additional_Staff_Count__c</fullName>
    <label>NTE Additional Staff Count</label>
    <length>40</length>
    <type>Text</type>
</CustomField>