force-app/main/default/objects/Opportunity/fields/NTE_Additional_Staff_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>NTE_Additional_Staff_Unit_Price__c</fullName>
    <label>NTE Additional Staff Unit Price (ex VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>