force-app/main/default/objects/Opportunity/fields/NTE_Agreement_Provided__c.field-meta.xml
<CustomField>
    <fullName>NTE_Agreement_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NTE Supplier Agreement Provided</label>
    <type>Checkbox</type>
</CustomField>