force-app/main/default/objects/Opportunity/fields/NTE_Alternative_Organisation_Name__c.field-meta.xml
<CustomField>
    <fullName>NTE_Alternative_Organisation_Name__c</fullName>
    <label>NTE Alternative Organisation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>