force-app/main/default/objects/Opportunity/fields/NTE_Approval_Email_Batch__c.field-meta.xml
<CustomField>
    <fullName>NTE_Approval_Email_Batch__c</fullName>
    <label>NTE Provisional Email Batch</label>
    <length>64</length>
    <type>Text</type>
</CustomField>