force-app/main/default/objects/Opportunity/fields/NTE_Approval_Email_Error__c.field-meta.xml
<CustomField>
    <fullName>NTE_Approval_Email_Error__c</fullName>
    <label>NTE Provisional Email Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>