force-app/main/default/objects/Opportunity/fields/NTE_Approval_Email_Kind__c.field-meta.xml
<CustomField>
    <fullName>NTE_Approval_Email_Kind__c</fullName>
    <description>The requested kind of booking email, retained while the manual send is processed.</description>
    <label>NTE Booking Email Kind</label>
    <length>40</length>
    <type>Text</type>
</CustomField>