force-app/main/default/objects/Opportunity/fields/NTE_Approval_Email_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>NTE_Approval_Email_Lead_Id__c</fullName>
    <label>NTE Provisional Email Lead ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>