force-app/main/default/objects/Opportunity/fields/NTE_Approval_Email_Recipient__c.field-meta.xml
<CustomField>
    <fullName>NTE_Approval_Email_Recipient__c</fullName>
    <label>NTE Provisional Email Recipient</label>
    <type>Email</type>
</CustomField>