force-app/main/default/objects/Opportunity/fields/NTE_Approval_Email_Requested_At__c.field-meta.xml
<CustomField>
    <fullName>NTE_Approval_Email_Requested_At__c</fullName>
    <label>NTE Provisional Email Requested At</label>
    <type>DateTime</type>
</CustomField>