force-app/main/default/objects/Opportunity/fields/NTE_Approval_Email_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>NTE_Approval_Email_Requested_By__c</fullName>
    <label>NTE Provisional Email Requested By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>