force-app/main/default/objects/Opportunity/fields/NTE_Approval_Email_Sent_At__c.field-meta.xml
<CustomField>
    <fullName>NTE_Approval_Email_Sent_At__c</fullName>
    <label>NTE Provisional Email Sent At</label>
    <type>DateTime</type>
</CustomField>