force-app/main/default/objects/Opportunity/fields/NTE_Approval_Email_Status__c.field-meta.xml
<CustomField>
    <fullName>NTE_Approval_Email_Status__c</fullName>
    <label>NTE Provisional Email Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>