force-app/main/default/objects/Opportunity/fields/NTE_Attendance_Status__c.field-meta.xml
<CustomField>
    <fullName>NTE_Attendance_Status__c</fullName>
    <label>NTE Attendance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Did Not Attend</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>