force-app/main/default/objects/Opportunity/fields/NTE_Bank_Details_Provided__c.field-meta.xml
<CustomField>
    <fullName>NTE_Bank_Details_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NTE Bank Details Provided</label>
    <type>Checkbox</type>
</CustomField>