force-app/main/default/objects/Opportunity/fields/NTE_Confirmed_Value__c.field-meta.xml
<CustomField>
    <fullName>NTE_Confirmed_Value__c</fullName>
    <description>Booking value excluding VAT, including staff top-ups. Bookings needing a pricing check are excluded.</description>
    <formula>IF(NOT(NTE_Pricing_Ready__c), NULL, IF(AND(NOT(ISBLANK(Amount)), Amount &gt; 0), Amount, NTE_Listed_Price_Total__c) + BLANKVALUE(NTE_Top_Up_Staff_Total__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>NTE Confirmed Value (ex VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>