force-app/main/default/objects/Opportunity/fields/NTE_Declaration_Date__c.field-meta.xml
<CustomField>
    <fullName>NTE_Declaration_Date__c</fullName>
    <label>NTE Declaration Date</label>
    <type>Date</type>
</CustomField>