force-app/main/default/objects/Opportunity/fields/NTE_Delivery_Window__c.field-meta.xml
<CustomField>
    <fullName>NTE_Delivery_Window__c</fullName>
    <label>NTE Delivery Window</label>
    <length>255</length>
    <type>Text</type>
</CustomField>