force-app/main/default/objects/Opportunity/fields/NTE_Event_Code__c.field-meta.xml
<CustomField>
    <fullName>NTE_Event_Code__c</fullName>
    <externalId>true</externalId>
    <label>NTE Event Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>