force-app/main/default/objects/Opportunity/fields/NTE_Event_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>NTE_Event_Contact_Email__c</fullName>
    <label>NTE Event Contact Email</label>
    <type>Email</type>
</CustomField>