force-app/main/default/objects/Opportunity/fields/NTE_Event_Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>NTE_Event_Contact_Mobile__c</fullName>
    <label>NTE Event Contact Mobile</label>
    <type>Phone</type>
</CustomField>