force-app/main/default/objects/Opportunity/fields/NTE_Event_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>NTE_Event_Contact_Name__c</fullName>
    <label>NTE Event Contact Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>