force-app/main/default/objects/Opportunity/fields/NTE_Event_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>NTE_Event_Contact_Title__c</fullName>
    <label>NTE Event Contact Job Title</label>
    <length>128</length>
    <type>Text</type>
</CustomField>