force-app/main/default/objects/Opportunity/fields/NTE_Event_Discovery_Source__c.field-meta.xml
<CustomField>
    <fullName>NTE_Event_Discovery_Source__c</fullName>
    <label>NTE Event Discovery Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>