force-app/main/default/objects/Opportunity/fields/NTE_Exhibitor_Hall_Schedule__c.field-meta.xml
<CustomField>
    <fullName>NTE_Exhibitor_Hall_Schedule__c</fullName>
    <label>NTE Sunday Setup Availability</label>
    <length>40</length>
    <type>Text</type>
</CustomField>