force-app/main/default/objects/Opportunity/fields/NTE_Exhibitor_Organisation_Category__c.field-meta.xml
<CustomField>
    <fullName>NTE_Exhibitor_Organisation_Category__c</fullName>
    <label>NTE Exhibitor Organisation Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>