force-app/main/default/objects/Opportunity/fields/NTE_Exhibitor_Space_Position__c.field-meta.xml
<CustomField>
    <fullName>NTE_Exhibitor_Space_Position__c</fullName>
    <label>NTE Exhibitor Space Position</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>