force-app/main/default/objects/Opportunity/fields/NTE_Exhibitor_Space_Price__c.field-meta.xml
<CustomField>
    <fullName>NTE_Exhibitor_Space_Price__c</fullName>
    <label>NTE Exhibitor Space Price (ex VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>