force-app/main/default/objects/Opportunity/fields/NTE_Exhibitor_Space_Selections__c.field-meta.xml
<CustomField>
    <fullName>NTE_Exhibitor_Space_Selections__c</fullName>
    <label>NTE Exhibitor Space Selection</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>