force-app/main/default/objects/Opportunity/fields/NTE_Exhibitor_Space_Size__c.field-meta.xml
<CustomField>
    <fullName>NTE_Exhibitor_Space_Size__c</fullName>
    <label>NTE Exhibitor Space Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>