force-app/main/default/objects/Opportunity/fields/NTE_Final_Pack_Recipient__c.field-meta.xml
<CustomField>
    <fullName>NTE_Final_Pack_Recipient__c</fullName>
    <label>NTE Final Pack Recipient</label>
    <type>Email</type>
</CustomField>