force-app/main/default/objects/Opportunity/fields/NTE_Final_Pack_Sent_At__c.field-meta.xml
<CustomField>
    <fullName>NTE_Final_Pack_Sent_At__c</fullName>
    <label>NTE Joining Instructions Sent At</label>
    <type>DateTime</type>
</CustomField>