force-app/main/default/objects/Opportunity/fields/NTE_Final_Pack_Status__c.field-meta.xml
<CustomField>
    <fullName>NTE_Final_Pack_Status__c</fullName>
    <label>NTE Final Pack Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>