force-app/main/default/objects/Opportunity/fields/NTE_Finance_Payment_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>NTE_Finance_Payment_Confirmed__c</fullName>
    <description>Every applicable payment is recorded; complimentary bookings have their confirmation sent. Procurement ticks do not gate this status.</description>
    <formula>AND(NTE_Pricing_Ready__c, AND(IF(OR(NTE_Invoice_Required__c = &quot;Yes&quot;, NTE_Listed_Price_Total__c &gt; 0, NOT(NTE_Pricing_Ready__c)), NTE_Payment_Received__c, OR(NTE_Free_Space_Confirmed__c, NTE_Payment_Received__c)), OR(NOT(OR(NTE_Top_Up_Invoice_Required__c, BLANKVALUE(NTE_Top_Up_Staff_Total__c, 0) &gt; 0)), NTE_Top_Up_Payment_Received__c)))</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>NTE Payment Confirmed</label>
    <type>Checkbox</type>
</CustomField>