force-app/main/default/objects/Opportunity/fields/NTE_Finance_Requirements_Due__c.field-meta.xml
<CustomField>
    <fullName>NTE_Finance_Requirements_Due__c</fullName>
    <description>Awaiting a manual booking confirmation or payment request; checklist ticks do not control this status.</description>
    <formula>OR(NOT(NTE_Pricing_Ready__c), AND(NOT(NTE_Payment_Received__c), IF(OR(NTE_Invoice_Required__c = &quot;Yes&quot;, NTE_Listed_Price_Total__c &gt; 0, NOT(NTE_Pricing_Ready__c)), ISBLANK(NTE_Approval_Email_Sent_At__c), NOT(NTE_Free_Space_Confirmed__c))), AND(OR(NTE_Top_Up_Invoice_Required__c, BLANKVALUE(NTE_Top_Up_Staff_Total__c, 0) &gt; 0), ISBLANK(NTE_Top_Up_Payment_Requested_At__c), NOT(NTE_Top_Up_Payment_Received__c)))</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>NTE Finance Requirements</label>
    <type>Checkbox</type>
</CustomField>