force-app/main/default/objects/Opportunity/fields/NTE_Free_Space_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>NTE_Free_Space_Confirmed__c</fullName>
    <description>A free booking or waived booking has had its confirmation accepted for sending. Set by the Master Panel action; staff may tick or untick it on the record as a manual fallback.</description>
    <defaultValue>false</defaultValue>
    <label>NTE Free Space Confirmed</label>
    <type>Checkbox</type>
</CustomField>