force-app/main/default/objects/Opportunity/fields/NTE_Has_Special_Requirements__c.field-meta.xml
<CustomField>
    <fullName>NTE_Has_Special_Requirements__c</fullName>
    <label>NTE Has Special Requirements</label>
    <length>40</length>
    <type>Text</type>
</CustomField>