force-app/main/default/objects/Opportunity/fields/NTE_Haulier_Name__c.field-meta.xml
<CustomField>
    <fullName>NTE_Haulier_Name__c</fullName>
    <label>NTE Haulier Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>