force-app/main/default/objects/Opportunity/fields/NTE_Haulier_Staff__c.field-meta.xml
<CustomField>
    <fullName>NTE_Haulier_Staff__c</fullName>
    <label>NTE Haulier Staff</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>