force-app/main/default/objects/Opportunity/fields/NTE_Haulier_Vehicle_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>NTE_Haulier_Vehicle_Dimensions__c</fullName>
    <label>NTE Haulier Vehicle Dimensions</label>
    <length>120</length>
    <type>Text</type>
</CustomField>