force-app/main/default/objects/Opportunity/fields/NTE_Haulier_Vehicle_Gross_Weight__c.field-meta.xml
<CustomField>
    <fullName>NTE_Haulier_Vehicle_Gross_Weight__c</fullName>
    <label>NTE Haulier Vehicle Gross Weight</label>
    <length>120</length>
    <type>Text</type>
</CustomField>