force-app/main/default/objects/Opportunity/fields/NTE_Haulier_Vehicle_Registration__c.field-meta.xml
<CustomField>
    <fullName>NTE_Haulier_Vehicle_Registration__c</fullName>
    <label>NTE Haulier Vehicle Registration</label>
    <length>80</length>
    <type>Text</type>
</CustomField>