force-app/main/default/objects/Opportunity/fields/NTE_Haulier_Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>NTE_Haulier_Vehicle_Type__c</fullName>
    <label>NTE Haulier Vehicle Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>