force-app/main/default/objects/Opportunity/fields/NTE_Heavy_Item_2_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>NTE_Heavy_Item_2_Dimensions__c</fullName>
    <label>NTE Heavy Item 2 Dimensions</label>
    <length>120</length>
    <type>Text</type>
</CustomField>