force-app/main/default/objects/Opportunity/fields/NTE_Heavy_Item_2_Registration__c.field-meta.xml
<CustomField>
    <fullName>NTE_Heavy_Item_2_Registration__c</fullName>
    <label>NTE Heavy Item 2 Registration</label>
    <length>80</length>
    <type>Text</type>
</CustomField>