force-app/main/default/objects/Opportunity/fields/NTE_Heavy_Item_3_Description__c.field-meta.xml
<CustomField>
    <fullName>NTE_Heavy_Item_3_Description__c</fullName>
    <label>NTE Heavy Item 3 Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>