force-app/main/default/objects/Opportunity/fields/NTE_Heavy_Vehicle_Required__c.field-meta.xml
<CustomField>
    <fullName>NTE_Heavy_Vehicle_Required__c</fullName>
    <label>NTE Heavy Vehicle Required</label>
    <length>40</length>
    <type>Text</type>
</CustomField>