force-app/main/default/objects/Opportunity/fields/NTE_Heavy_Vehicle_Update_Completed_At__c.field-meta.xml
<CustomField>
    <fullName>NTE_Heavy_Vehicle_Update_Completed_At__c</fullName>
    <description>Set automatically after a Heavy Vehicle Details submission has been applied successfully.</description>
    <label>NTE Heavy Vehicle Update Completed At</label>
    <type>DateTime</type>
</CustomField>