force-app/main/default/objects/Opportunity/fields/NTE_Included_Staff_Count__c.field-meta.xml
<CustomField>
    <fullName>NTE_Included_Staff_Count__c</fullName>
    <label>NTE Included Staff Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>