force-app/main/default/objects/Opportunity/fields/NTE_Industry_Body_Details__c.field-meta.xml
<CustomField>
    <fullName>NTE_Industry_Body_Details__c</fullName>
    <label>NTE Industry Body Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>