force-app/main/default/objects/Opportunity/fields/NTE_Invoice_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>NTE_Invoice_Additional_Information__c</fullName>
    <label>NTE Invoice Additional Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>