force-app/main/default/objects/Opportunity/fields/NTE_Invoice_Address__c.field-meta.xml
<CustomField>
    <fullName>NTE_Invoice_Address__c</fullName>
    <label>NTE Invoice Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>