force-app/main/default/objects/Opportunity/fields/NTE_Invoice_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>NTE_Invoice_Contact_Phone__c</fullName>
    <label>NTE Invoice Contact Phone</label>
    <type>Phone</type>
</CustomField>