force-app/main/default/objects/Opportunity/fields/NTE_Invoice_Details_Included__c.field-meta.xml
<CustomField>
    <fullName>NTE_Invoice_Details_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NTE Invoice Details Included</label>
    <type>Checkbox</type>
</CustomField>