force-app/main/default/objects/Opportunity/fields/NTE_Invoice_Provided__c.field-meta.xml
<CustomField>
    <fullName>NTE_Invoice_Provided__c</fullName>
    <description>Selected from the NTE Master Panel after the invoice or Stripe payment link has been sent.</description>
    <defaultValue>false</defaultValue>
    <label>NTE Invoice / Stripe Link Provided</label>
    <type>Checkbox</type>
</CustomField>