force-app/main/default/objects/Opportunity/fields/NTE_Invoice_Provided_At__c.field-meta.xml
<CustomField>
    <fullName>NTE_Invoice_Provided_At__c</fullName>
    <label>NTE Invoice / Stripe Link Provided At</label>
    <type>DateTime</type>
</CustomField>