force-app/main/default/objects/Opportunity/fields/NTE_Invoice_Provided_By__c.field-meta.xml
<CustomField>
    <fullName>NTE_Invoice_Provided_By__c</fullName>
    <label>NTE Invoice / Stripe Link Provided By</label>
    <length>120</length>
    <type>Text</type>
</CustomField>