force-app/main/default/objects/Opportunity/fields/NTE_Invoice_Required__c.field-meta.xml
<CustomField>
    <fullName>NTE_Invoice_Required__c</fullName>
    <label>NTE Invoice Required</label>
    <length>40</length>
    <type>Text</type>
</CustomField>