force-app/main/default/objects/Opportunity/fields/NTE_Invoiced_Company__c.field-meta.xml
<CustomField>
    <fullName>NTE_Invoiced_Company__c</fullName>
    <label>NTE Invoiced Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>