force-app/main/default/objects/Opportunity/fields/NTE_Invoiced_Email__c.field-meta.xml
<CustomField>
    <fullName>NTE_Invoiced_Email__c</fullName>
    <label>NTE Invoiced Email</label>
    <type>Email</type>
</CustomField>