force-app/main/default/objects/Opportunity/fields/NTE_Invoiced_Person__c.field-meta.xml
<CustomField>
    <fullName>NTE_Invoiced_Person__c</fullName>
    <label>NTE Invoiced Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>