force-app/main/default/objects/Opportunity/fields/NTE_Joining_Instructions_By__c.field-meta.xml
<CustomField>
    <fullName>NTE_Joining_Instructions_By__c</fullName>
    <label>NTE Joining Instructions Recorded By</label>
    <length>120</length>
    <type>Text</type>
</CustomField>