force-app/main/default/objects/Opportunity/fields/NTE_Last_Update_Declaration_Date__c.field-meta.xml
<CustomField>
    <fullName>NTE_Last_Update_Declaration_Date__c</fullName>
    <label>NTE Last Update Declaration Date</label>
    <type>Date</type>
</CustomField>