force-app/main/default/objects/Opportunity/fields/NTE_Last_Update_Declaration_Name__c.field-meta.xml
<CustomField>
    <fullName>NTE_Last_Update_Declaration_Name__c</fullName>
    <label>NTE Last Update Declaration Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>