force-app/main/default/objects/Opportunity/fields/NTE_Last_Update_Error__c.field-meta.xml
<CustomField>
    <fullName>NTE_Last_Update_Error__c</fullName>
    <label>NTE Last Update Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>