force-app/main/default/objects/Opportunity/fields/NTE_Last_Update_Form_Version__c.field-meta.xml
<CustomField>
    <fullName>NTE_Last_Update_Form_Version__c</fullName>
    <label>NTE Last Update Form Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>