force-app/main/default/objects/Opportunity/fields/NTE_Last_Update_Processed_At__c.field-meta.xml
<CustomField>
    <fullName>NTE_Last_Update_Processed_At__c</fullName>
    <label>NTE Last Update Processed At</label>
    <type>DateTime</type>
</CustomField>