force-app/main/default/objects/Opportunity/fields/NTE_Last_Update_Type__c.field-meta.xml
<CustomField>
    <fullName>NTE_Last_Update_Type__c</fullName>
    <label>NTE Last Update Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>