force-app/main/default/objects/Opportunity/fields/NTE_Listed_Price_Total__c.field-meta.xml
<CustomField>
    <fullName>NTE_Listed_Price_Total__c</fullName>
    <label>NTE Listed Price Total (ex VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>