force-app/main/default/objects/Opportunity/fields/NTE_Logistics_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>NTE_Logistics_Contact_Name__c</fullName>
    <description>Main contact supplied on the most recent Heavy Vehicle Details submission. Replaced automatically when a later submission is applied.</description>
    <label>NTE Logistics Contact Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>