force-app/main/default/objects/Opportunity/fields/NTE_Logistics_Second_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>NTE_Logistics_Second_Contact_Phone__c</fullName>
    <description>Second contact supplied on the most recent Heavy Vehicle Details submission. Replaced automatically when a later submission is applied.</description>
    <label>NTE Logistics Second Contact Phone</label>
    <type>Phone</type>
</CustomField>