force-app/main/default/objects/Opportunity/fields/NTE_Logo_Update_Provided__c.field-meta.xml
<CustomField>
    <fullName>NTE_Logo_Update_Provided__c</fullName>
    <description>Selected automatically after a Logo Update submission has been matched to this NTE booking.</description>
    <defaultValue>false</defaultValue>
    <label>NTE Logo Update Provided</label>
    <type>Checkbox</type>
</CustomField>