force-app/main/default/objects/Opportunity/fields/NTE_Logo_Update_Provided_At__c.field-meta.xml
<CustomField>
    <fullName>NTE_Logo_Update_Provided_At__c</fullName>
    <description>The date and time the first matched Logo Update submission was received.</description>
    <label>NTE Logo Update Provided At</label>
    <type>DateTime</type>
</CustomField>