force-app/main/default/objects/Opportunity/fields/NTE_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>NTE_Payment_Method__c</fullName>
    <label>NTE Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank transfer</fullName>
            </value>
            <value>
                <fullName>Stripe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>