force-app/main/default/objects/Opportunity/fields/NTE_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>NTE_Payment_Received__c</fullName>
    <description>Selected from the NTE Master Panel after payment has been confirmed.</description>
    <defaultValue>false</defaultValue>
    <label>NTE Payment Received</label>
    <type>Checkbox</type>
</CustomField>