force-app/main/default/objects/Opportunity/fields/NTE_Payment_Received_At__c.field-meta.xml
<CustomField>
    <fullName>NTE_Payment_Received_At__c</fullName>
    <label>NTE Payment Received At</label>
    <type>DateTime</type>
</CustomField>