force-app/main/default/objects/Opportunity/fields/NTE_Payment_Recorded_By__c.field-meta.xml
<CustomField>
    <fullName>NTE_Payment_Recorded_By__c</fullName>
    <label>NTE Payment Recorded By</label>
    <length>120</length>
    <type>Text</type>
</CustomField>