force-app/main/default/objects/Opportunity/fields/NTE_Planned_Exhibitor_Count__c.field-meta.xml
<CustomField>
    <fullName>NTE_Planned_Exhibitor_Count__c</fullName>
    <label>NTE Planned Exhibitor Count</label>
    <length>40</length>
    <type>Text</type>
</CustomField>