force-app/main/default/objects/Opportunity/fields/NTE_PO_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>NTE_PO_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NTE Purchase Order Confirmed</label>
    <type>Checkbox</type>
</CustomField>