force-app/main/default/objects/Opportunity/fields/NTE_Power_Socket_Count__c.field-meta.xml
<CustomField>
    <fullName>NTE_Power_Socket_Count__c</fullName>
    <label>NTE Power Socket Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>