force-app/main/default/objects/Opportunity/fields/NTE_Power_Socket_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>NTE_Power_Socket_Unit_Price__c</fullName>
    <label>NTE Power Socket Unit Price (ex VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>