force-app/main/default/objects/Opportunity/fields/NTE_Previous_Events__c.field-meta.xml
<CustomField>
    <fullName>NTE_Previous_Events__c</fullName>
    <label>Previous NTE Events</label>
    <length>255</length>
    <type>Text</type>
</CustomField>