force-app/main/default/objects/Opportunity/fields/NTE_Price_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>NTE_Price_Adjustment__c</fullName>
    <description>Difference between the original item charges and the revised net booking total. To revise the booking price, edit Amount including VAT.</description>
    <defaultValue>0</defaultValue>
    <label>NTE Booking Adjustment (ex VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>